# fatpq

./: .gitmodules
libfatpq/: Makefile.am  autogen.sh  configure.in  fatpq.1  fatpq.c  fatpq.lsm.in  fatpq.spec.in  fatpq.texinfo  system.h  xmalloc.c
